--- a/boston/scss/_large.scss
+++ b/boston/scss/_large.scss
@@ -1,9 +1,9 @@
 
 
+
     main, header, nav {
         max-width: 64rem;
-        margin: auto;
-
+        margin: auto
 
     }
     nav ul{
